force-app/main/default/objects/HAM_Current_Chapter__c/HAM_Current_Chapter__c.object-meta.xml
<CustomObject>
    <description>Tracks the association between a Constituent and a Chapter, enabling structured chapter membership management, regional engagement reporting, and source tracking.</description>
    <label>Current Chapter</label>
    <nameField>
        <displayFormat>CC-{0}</displayFormat>
        <label>Current Chapter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Current Chapters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>