force-app/main/default/objects/HAM_Current_Chapter__c/fields/Chapter__c.field-meta.xml
<CustomField>
    <fullName>Chapter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Links this chapter membership record to a specific Chapter.</description>
    <inlineHelpText>Select the Chapter this Constituent is associated with. Required.</inlineHelpText>
    <label>Chapter</label>
    <referenceTo>HAM_Chapter_Lookup__c</referenceTo>
    <relationshipLabel>Current Chapters</relationshipLabel>
    <relationshipName>Current_Chapters</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>