force-app/main/default/objects/HAM_Current_Chapter__c/fields/Constituent__c.field-meta.xml
<CustomField>
    <fullName>Constituent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Links this chapter membership record to a specific Constituent (Contact) in the system.</description>
    <inlineHelpText>Select the Constituent associated with this chapter membership. Required.</inlineHelpText>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Current Chapters</relationshipLabel>
    <relationshipName>Current_Chapters</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>