force-app/main/default/objects/HAM_Current_Chapter__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Constituent&apos;s association with this Chapter is currently active.</description>
    <inlineHelpText>Check if this chapter membership is currently active. Defaults to unchecked.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>