force-app/main/default/objects/HAM_Current_Chapter__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Automatically derived from the related Chapter&apos;s Region field. Read-only.</description>
    <formula>TEXT(Chapter__r.HAM_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the Region from the associated Chapter record. This field is auto-populated and cannot be edited.</inlineHelpText>
    <label>Region</label>
    <type>Text</type>
</CustomField>