force-app/main/default/objects/HAM_Current_Chapter__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Indicates how this chapter association was created or last updated.</description>
    <inlineHelpText>Select the source of this chapter assignment: Address Update (derived from address data), Manual Update (staff-entered), or Portal Update (submitted via the alumni portal).</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Address Update</fullName>
            </value>
            <value>
                <fullName>Manual Update</fullName>
            </value>
            <value>
                <fullName>Portal Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>