force-app/main/default/objects/HAM_Current_Chapter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Constituent__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Region__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>